--- a/lab3/lab3.ipynb
+++ b/lab3/lab3.ipynb
@@ -562,19 +562,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def average(*nums):\n",
+    "def average(*nums, lists=[]):\n",
     "    \"\"\"Return the average of numeric arguments or None if no arguments are supplied.\"\"\"\n",
+    "    \n",
     "    soma = 0\n",
+    "    for numero in lists:\n",
+    "        soma += numero\n",
+    "    \n",
     "    for numero in nums:\n",
     "        soma += numero\n",
+    "    \n",
     "    if soma == 0:\n",
     "        return None\n",
     "    else:\n",
-    "        media = soma / len(nums) \n",
+    "        media = soma / (len(nums)+len(lists)) \n",
     "    return media"
    ]
   },
@@ -593,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -621,26 +626,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "unsupported operand type(s) for +=: 'int' and 'list'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-93-c3ac90fabad1>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0ml\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m41\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m592\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m65358\u001b[0m\u001b[1;33m]\u001b[0m  \u001b[1;31m# or any other user-defined input.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0maverage\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ml\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m<ipython-input-91-527b56b58bda>\u001b[0m in \u001b[0;36maverage\u001b[1;34m(*nums)\u001b[0m\n\u001b[0;32m      3\u001b[0m     \u001b[0msoma\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mnumero\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mnums\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m         \u001b[0msoma\u001b[0m \u001b[1;33m+=\u001b[0m \u001b[0mnumero\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      6\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0msoma\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for +=: 'int' and 'list'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13199.0\n"
      ]
     }
    ],
    "source": [
     "l = [3, 1, 41, 592, 65358]  # or any other user-defined input.\n",
     "\n",
-    "print(average(l))"
+    "print(average(lists=l))"
    ]
   },
   {
@@ -755,9 +755,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello!\n",
+      "None\n",
+      "arg: None\n",
+      "None\n",
+      "arg: 5\n",
+      "5\n",
+      "arg: Hello\n",
+      "Hello\n",
+      "Oh no!\n",
+      "100\n"
+     ]
+    }
+   ],
    "source": [
     "def say_hello():\n",
     "    print(\"Hello!\")\n",
@@ -819,9 +836,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Before reassign: arr=[4]\n",
+      "Inside reassign: arr = [4, 1]\n",
+      "After reassign: arr=[4]\n",
+      "Before append_one: arr=[4]\n",
+      "Inside append_one: arr = [4, 1]\n",
+      "After append_one: arr=[4, 1]\n"
+     ]
+    }
+   ],
    "source": [
     "def reassign(arr):\n",
     "    arr = [4, 1]\n",
@@ -887,9 +917,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(outside foo) x: 10\n",
+      "(inside foo) x: 10\n",
+      "value: 50\n",
+      "(after foo) x: 10\n"
+     ]
+    }
+   ],
    "source": [
     "# Case 1\n",
     "x = 10\n",
@@ -906,9 +947,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(outside foo) x: 10\n",
+      "(inside foo) x: 8\n",
+      "value: 40\n",
+      "(after foo) x: 10\n"
+     ]
+    }
+   ],
    "source": [
     "# Case 2\n",
     "x = 10\n",
@@ -974,7 +1026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -987,9 +1039,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "UnboundLocalError",
+     "evalue": "local variable 'lst' referenced before assignment",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-7-6694f5363179>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mfoo\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mlst\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlst\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mfoo\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-7-6694f5363179>\u001b[0m in \u001b[0;36mfoo\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mlst\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mfoo\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m     \u001b[0mlst\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlst\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0mfoo\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mUnboundLocalError\u001b[0m: local variable 'lst' referenced before assignment"
+     ]
+    }
+   ],
    "source": [
     "# This doesn't\n",
     "lst = [1,2,3]\n",
@@ -1018,9 +1083,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "25\n",
+      "25\n",
+      "[6]\n",
+      "[7]\n"
+     ]
+    }
+   ],
    "source": [
     "x = 5\n",
     "\n",
@@ -1029,7 +1105,19 @@
     "\n",
     "x = 6\n",
     "print(square())   # => 25, not 36\n",
-    "print(square(x))  # => 36"
+    "print(square())  # => 36\n",
+    "\n",
+    "\n",
+    "\n",
+    "x = [5]\n",
+    "\n",
+    "def square(num=x):\n",
+    "    return num\n",
+    "\n",
+    "x[0] = 6\n",
+    "print(square())   # => 25, not 36\n",
+    "x[0] = 7\n",
+    "print(square())  # => 36"
    ]
   },
   {
@@ -1059,9 +1147,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4, 1, 1]\n",
+      "[2, 3, 5, 7, 11, 11]\n",
+      "[1, 1]\n",
+      "[1, 1, 2, 2]\n",
+      "[1, 1, 2, 2, 3, 3]\n"
+     ]
+    }
+   ],
    "source": [
     "# Something fishy is going on here. Can you deduce what is happening?\n",
     "def append_twice(a, lst=[]):\n",
@@ -1109,7 +1209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1141,9 +1241,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "89\n",
+      "{0: 1, 1: 1, 2: 2, 3: 3, 4: 5, 5: 8, 6: 13, 7: 21, 8: 34, 9: 55, 10: 89}\n"
+     ]
+    }
+   ],
    "source": [
     "def fib(n, cache={0: 1, 1: 1}):\n",
     "    if n in cache:  # Note: starting values in the dictionary captures our base cases.\n",
@@ -1187,9 +1296,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'indent': True, 'spaces': 4}"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def all_together(x, y, z=1, *nums, indent=True, spaces=4, **options): pass\n",
     "\n",
@@ -1208,9 +1328,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Summary line: do nothing, but document it.\n",
+      "        \n",
+      "    Description: No, really, it doesn't do anything.\n",
+      "    \n"
+     ]
+    }
+   ],
    "source": [
     "def my_function():\n",
     "    \"\"\"Summary line: do nothing, but document it.\n",
@@ -1279,9 +1410,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "()\n",
+      "b't\\x00|\\x00|\\x01|\\x02\\x14\\x00\\x17\\x00\\x83\\x01\\x01\\x00t\\x00t\\x01|\\x05\\x83\\x01\\x83\\x01\\x01\\x00x@|\\x06\\xa0\\x02\\xa1\\x00D\\x00]4\\\\\\x02}\\x07}\\x08|\\x03rDt\\x00d\\x01\\xa0\\x03|\\x07|\\x08\\xa1\\x02\\x83\\x01\\x01\\x00q&t\\x00d\\x02\\xa0\\x03|\\x07d\\x03|\\x04\\x14\\x00|\\x08\\xa1\\x03\\x83\\x01\\x01\\x00q&W\\x00d\\x04S\\x00'\n",
+      "('A useless comment', '{}\\t{}', '{}{}{}', ' ', None)\n",
+      "<ipython-input-38-e323585adf3a>\n",
+      "1\n",
+      "79\n",
+      "()\n",
+      "2\n",
+      "b'\\x00\\x02\\x10\\x01\\x0c\\x01\\x12\\x01\\x04\\x01\\x12\\x02'\n",
+      "all_together\n",
+      "('print', 'sum', 'items', 'format')\n",
+      "9\n",
+      "7\n",
+      "('x', 'y', 'z', 'indent', 'spaces', 'nums', 'options', 'k', 'v')\n"
+     ]
+    }
+   ],
    "source": [
     "def all_together(x, y, z=1, *nums, indent=True, spaces=4, **options):\n",
     "    \"\"\"A useless comment\"\"\"\n",
@@ -1323,9 +1476,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You're... not awesome. OOOOH\n",
+      "None\n"
+     ]
+    }
+   ],
    "source": [
     "def nice(): print(\"You're awesome!\")\n",
     "def mean(): print(\"You're... not awesome. OOOOH\")\n",
@@ -1378,9 +1540,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  2           0 SETUP_LOOP              22 (to 24)\n",
+      "        >>    2 LOAD_FAST                1 (b)\n",
+      "              4 POP_JUMP_IF_FALSE       22\n",
+      "\n",
+      "  3           6 LOAD_FAST                1 (b)\n",
+      "              8 LOAD_FAST                0 (a)\n",
+      "             10 LOAD_FAST                1 (b)\n",
+      "             12 BINARY_MODULO\n",
+      "             14 ROT_TWO\n",
+      "             16 STORE_FAST               0 (a)\n",
+      "             18 STORE_FAST               1 (b)\n",
+      "             20 JUMP_ABSOLUTE            2\n",
+      "        >>   22 POP_BLOCK\n",
+      "\n",
+      "  4     >>   24 LOAD_FAST                0 (a)\n",
+      "             26 RETURN_VALUE\n"
+     ]
+    }
+   ],
    "source": [
     "def gcd(a, b):\n",
     "    while b:\n",
@@ -1404,9 +1589,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'a': <class 'int'>, 'b': <class 'str'>, 'return': <class 'list'>}\n"
+     ]
+    }
+   ],
    "source": [
     "def annotated(a: int, b: str) -> list:\n",
     "    return [a, b]\n",
@@ -1435,9 +1628,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello world!\n",
+      "Hello world!\n"
+     ]
+    }
+   ],
    "source": [
     "def greet(): print(\"Hello world!\")\n",
     "\n",
@@ -1559,7 +1761,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
